# sudoku-omakase

./: .gitignore  LICENSE  PROCCESS.md  README.md  extraction_results.txt  proceccess.txt  pyproject.toml  requirements.txt
DOCS/: PROCESS.md  rulesets.md
model_training/: steps.py  train.py  warmup.py
src/: Sudoku.py  models.py  photo_processing.py  predictor.py  solver.py  test.txt  testing.py  train.py  warmup.py
src/helpers/: dev_info.py  printer.py  test_model.py  train_help.py
src/sudoku_omakase/: Sudoku.py  __init__.py  models.py  photo_processing.py  pipeline.py  solver.py
src/sudoku_omakase/core/: solver.py  sudoku.py  sudoku_image.py
src/sudoku_omakase/helpers/: predictor.py
src/sudoku_omakase/model/: models.py  predictor.py  weights.py
src/sudoku_omakase/neural_network/: models.py  predictor.py  weights.py
src/sudoku_omakase/vision/: cell_extraction.py  preprocess.py  sudoku_image.py
src/test/scripts/: test_model.py
src/training/: models.py  train.py  warmup.py
tests/test_results/: extraction_results.txt
tests/test_scripts/: test_extraction.py  test_model.py  test_sudokus.py  testing.py
