[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sudoku_omakase"
version = "0.1.0"
description = "A computer vision and Sudoku solving project"
authors = [
    {name = "Philipp"},
    {name = "Konstantin"}

]
# TODO add dependencies
dependencies = [
    # "numpy",
    # "opencv-python",
]

[tool.setuptools.packages.find]
where = ["src"]