[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sudoku_omakase"
version = "0.1.4"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
description = "A computer vision and Sudoku solving project"
authors = [
    {name = "Philipp"},
    {name = "Konstantin"}

]

dependencies = [
    "numpy==2.4.2",
    "opencv-python==4.13.0.92",
    "scipy==1.17.0",
    "pooch==1.9.0",
    "tqdm==4.67.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
"Homepage" = "https://github.com/LmsCodingLab/sudoku-omakase"